--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,32 @@
     width: 100%;
     object-fit: cover;
 }
+.txt-image{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    color: white;
+    padding: 20px;
+    background-color:black;
+}
+.prev, .next{
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: gray;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.prev{
+    left: 20px;
+}
+.next{
+    right: 20px;
+}
+
+.prev i,
+.next i {
+    font-size: 50px;
+}
