--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 .carousel{
     width: 900px;
     height: 400px;
-    background-color: red;
+    position: relative;
 }
 .images{
     height: 100%;
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 .prev{
     left: 20px;
